# local-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: agent.py  api.py  chunker.py  citations.py  cli.py  code_parser.py  config.py  embed.py  errors.py  lexical.py  llm.py  loader.py  memory.py  rag.py  retrieval.py  test_rag.py  test_search.py  tools.py  vector_store.py
app/ingest/: ingest.py
app/parsers/: __init__.py  code_parser.py  java_parser.py
data/: main.cpp  main.py  sample.txt
docs/: demo.cast
evaluation/: retrieval_cases.json
scripts/: evaluate_retrieval.py  fetch_eval_corpus.sh  record_demo.py
tests/: conftest.py  test_agent.py  test_api.py  test_chunker.py  test_citations.py  test_cli.py  test_ingest.py  test_lexical.py  test_loader.py  test_memory.py  test_parsers.py  test_rag.py  test_retrieval.py  test_services.py  test_tools.py
