[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# The project is not yet installable, so `app` is only importable when the
# repository root is on sys.path. `python -m pytest` adds it implicitly; a bare
# `pytest` (how CI invokes it) does not. Replace this with a real [project]
# table and `pip install -e .` when packaging lands.
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
